--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@ margin-right: auto;"
     </a>
 </div>
 <h1>Home Page</h1>
-<p class="ShortParagraph">Welcome to my website, this is a place where i will share my latest opinions on current gaming news and give my personal reviews of games that i have played either recently or a while ago. I also hope to share some personal projects on here in the future.</p>
+<p class="ShortParagraph">Welcome to my website, this is a place where I will share my latest opinions on current gaming news. 
+    <br>
+    Also, give my personal reviews of games that I have played either recently or a while ago. 
+    <br>
+    On top of this, I hope to share some personal projects on here in the future.</p>
 
 <!-- <a href="https://youtu.be/JFpmnoh0GqU" target="_blank">
 <img src="test3.jpg" alt="hasbulla"
@@ -50,7 +54,9 @@ border: 7px solid rgb(255, 255, 255);">
 </a>
 <br>
 
-<p class="ShortParagraph">V-Rising is a game where you take on the role of a vampire and progress through a pre-generated world collecting resources, building castles, fighting bosses, and potential battling against other players. The game has fun and rare mechanics which you do not see often in many games; these mechanics range from having to hide in the shadows (or waiting for night time) to traverse the world and reach various milestones.</p>
+<p class="ShortParagraph">V-Rising is a game where you take on the role of a vampire and progress through a pre-generated world collecting resources, building castles, fighting bosses, and potential battling against other players. 
+   <br>
+   The game has fun and rare mechanics which you do not see often in many games; these mechanics range from having to hide in the shadows (or waiting for night time) to traverse the world and reach various milestones.</p>
 
 
 </body>
