--- a/Q&A.html
+++ b/Q&A.html
@@ -34,7 +34,7 @@ margin-right: auto;"
 <p class="ShortParagraph">The point of the website is to share my latest opinions on current gaming news or to give my personal review of games I have played recently. I will also share some projects that I am working on every now and then.</p>
 <h2>How can I contact you?</h2>
 <p> I currently have two places where you can contact me such as <a href="https://twitter.com/jabobo0900" target="_blank"
-style="color: white;"><b>Twitter</b></a> or you can email me at <u><b>som230602@gmail.com</b></u></a>
+style="color: white;"><b>Twitter</b></a> or you can email me at <u><b><a href="mailto:som230602@gmail.com">som230602@gmail.com</a></b></u>
 
 
 </body>
